Made a small change to the admin theme to ensure that content does not wrap oddly as a result of the right-hand sidebar.

--- a/data/themes/bbAdmin/css/bbadmin.all.css
+++ b/data/themes/bbAdmin/css/bbadmin.all.css
@@ -195,6 +195,10 @@ width: 100%;
 float: left;
 }
 
+.BB_inside {
+margin-right: 160px;
+}
+
 #BB_main_left {
 width: 565px;
 float: left;
